--- a/demo.html
+++ b/demo.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div id="wrapper">
-               <figure>
+               
             <div class="mis-stage">
                 <!-- The element to select and apply miSlider to - the class is optional -->
                 <ol class="mis-slider">
@@ -49,64 +49,64 @@
                         <!-- A slide element - the class is optional -->
                         <a href="#" class="mis-container">
                             <!-- A slide container - this element is optional, if absent the plugin adds it automatically -->
-                            <figure>
+                            <div class="fig">
                                 <!-- Slide content - whatever you want -->
-                                <img src="images/garden01.jpg" alt="Pink Water Lillies">
+                                <!-- <img src="images/garden01.jpg" alt="Pink Water Lillies"> -->
                                 <figcaption>Pink Water Lillies</figcaption>
-                            </figure>
+                            </div>
                         </a>
                     </li>
                     <li class="mis-slide">
                         <a href="#" class="mis-container">
-                            <figure>
-                                <img src="images/garden02.jpg" alt="Pond with Lillies">
+                            <div class="fig">
+                               <!--  <img src="images/garden02.jpg" alt="Pond with Lillies"> -->
                                 <figcaption>Pond with Lillies</figcaption>
-                            </figure>
+                            </div>
                         </a>
                     </li>
                     <li class="mis-slide">
                         <a href="#" class="mis-container">
-                            <figure>
-                                <img src="images/garden03.jpg" alt="Hidden Pond">
+                            <div class="fig">
+                               <!--  <img src="images/garden03.jpg" alt="Hidden Pond"> -->
                                 <figcaption>Hidden Pond</figcaption>
-                            </figure>
+                            </div>
                         </a>
                     </li>
                     <li class="mis-slide">
                         <a href="#" class="mis-container">
-                            <figure>
-                                <img src="images/garden04.jpg" alt="Shrine">
+                            <div class="fig">
+                                <!-- <img src="images/garden04.jpg" alt="Shrine"> -->
                                 <figcaption>Shrine</figcaption>
-                            </figure>
+                            </div>
                         </a>
                     </li>
                     <li class="mis-slide">
                         <a href="#" class="mis-container">
-                            <figure>
-                                <img src="images/garden05.jpg" alt="White Water Lillies">
+                            <div class="fig">
+                               <!--  <img src="images/garden05.jpg" alt="White Water Lillies"> -->
                                 <figcaption>White Water Lillies</figcaption>
-                            </figure>
+                            </div>
                         </a>
                     </li>
                     <li class="mis-slide">
                         <a href="#" class="mis-container">
-                            <figure>
-                                <img src="images/garden06.jpg" alt="Garden Walkway">
+                            <div class="fig">
+                                <!-- <img src="images/garden06.jpg" alt="Garden Walkway"> -->
                                 <figcaption>Garden Walkway</figcaption>
-                            </figure>
+                            </div>
                         </a>
                     </li>
                     <li class="mis-slide">
                         <a href="#" class="mis-container">
-                            <figure>
-                                <img src="images/garden07.jpg" alt="Lilly with Bee">
+                            <div class="fig">
+                                <!-- <img src="images/garden07.jpg" alt="Lilly with Bee"> -->
                                 <figcaption>Lilly with Bee</figcaption>
-                            </figure>
+                            </div>
                         </a>
                     </li>
                 </ol>
-            </div>            
-        </figure>		
+            </div>         
+      	
     </div>
 </body>
 </html>
