--- a/demo.html
+++ b/demo.html
@@ -52,7 +52,7 @@
                             <div class="fig">
                                 <!-- Slide content - whatever you want -->
                                 <!-- <img src="images/garden01.jpg" alt="Pink Water Lillies"> -->
-                                <figcaption>Pink Water Lillies</figcaption>
+                                <p class="figcaption">Pink Water Lillies</p>
                             </div>
                         </a>
                     </li>
@@ -60,7 +60,7 @@
                         <a href="#" class="mis-container">
                             <div class="fig">
                                <!--  <img src="images/garden02.jpg" alt="Pond with Lillies"> -->
-                                <figcaption>Pond with Lillies</figcaption>
+                                <p class="figcaption">Pond with Lillies</p>
                             </div>
                         </a>
                     </li>
@@ -68,7 +68,7 @@
                         <a href="#" class="mis-container">
                             <div class="fig">
                                <!--  <img src="images/garden03.jpg" alt="Hidden Pond"> -->
-                                <figcaption>Hidden Pond</figcaption>
+                                <p class="figcaption">Hidden Pond</p>
                             </div>
                         </a>
                     </li>
@@ -76,7 +76,7 @@
                         <a href="#" class="mis-container">
                             <div class="fig">
                                 <!-- <img src="images/garden04.jpg" alt="Shrine"> -->
-                                <figcaption>Shrine</figcaption>
+                                <p class="figcaption">Shrine</p>
                             </div>
                         </a>
                     </li>
@@ -84,7 +84,7 @@
                         <a href="#" class="mis-container">
                             <div class="fig">
                                <!--  <img src="images/garden05.jpg" alt="White Water Lillies"> -->
-                                <figcaption>White Water Lillies</figcaption>
+                                <p class="figcaption">White Water Lillies</p>
                             </div>
                         </a>
                     </li>
@@ -92,7 +92,7 @@
                         <a href="#" class="mis-container">
                             <div class="fig">
                                 <!-- <img src="images/garden06.jpg" alt="Garden Walkway"> -->
-                                <figcaption>Garden Walkway</figcaption>
+                                <p class="figcaption">Garden Walkway</p>
                             </div>
                         </a>
                     </li>
@@ -100,7 +100,7 @@
                         <a href="#" class="mis-container">
                             <div class="fig">
                                 <!-- <img src="images/garden07.jpg" alt="Lilly with Bee"> -->
-                                <figcaption>Lilly with Bee</figcaption>
+                                <p class="figcaption">Lilly with Bee</p>
                             </div>
                         </a>
                     </li>
